@@ -24,20 +24,11 @@ import java.io.IOException;
 import org.kiji.annotations.ApiAudience;
 import org.kiji.annotations.Inheritance;
 import org.kiji.mapreduce.KijiContext;
-import org.kiji.schema.EntityId;
 
 /** Context for producers to output new cells in the currently processed row. */
 @ApiAudience.Public
 @Inheritance.Sealed
 public interface ProducerContext extends KijiContext {
-  /**
-   * @return the entity ID of the row being currently written to.
-   * @deprecated Use KijiRowData.getEntityId(). This accessor method is being
-   *     removed after 1.0.0-rc6.
-   */
-  @Deprecated
-  EntityId getEntityId();
-
   /**
    * Outputs a new cell to the configured output column with the current timestamp.
    *
