@@ -1,42 +1,0 @@
-/**
- * (c) Copyright 2012 WibiData, Inc.
- *
- * See the NOTICE file distributed with this work for additional
- * information regarding copyright ownership.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.kiji.mapreduce.produce.impl;
-
-import org.kiji.annotations.ApiAudience;
-import org.kiji.annotations.Inheritance;
-import org.kiji.mapreduce.produce.ProducerContext;
-import org.kiji.schema.EntityId;
-
-/**
- * Internal interface for producer contexts.
- *
- * Allows the produce mapper to set the entity ID.
- */
-@ApiAudience.Private
-@Inheritance.Sealed
-public interface InternalProducerContextInterface extends ProducerContext {
-  /**
-   * Sets the entity ID of the current row being processed and written to.
-   *
-   * @param entityId Entity ID of the row being processed and written to.
-   * @return this context.
-   */
-  InternalProducerContextInterface setEntityId(EntityId entityId);
-}
